--- a/config-server/src/main/resources/application-docker.properties
+++ b/config-server/src/main/resources/application-docker.properties
@@ -2,8 +2,8 @@ server.port=8080
 spring.application.name=config-server
 
 # Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://servicereg:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.cloud.config.server.git.uri=https://github.com/brnhrdwnnr/application-config/
-spring.cloud.config.server.git.clone-on-start=true
+#spring.cloud.config.server.git.clone-on-start=true
