--- a/jobms/src/main/resources/application-docker.properties
+++ b/jobms/src/main/resources/application-docker.properties
@@ -1,18 +1,12 @@
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
+job-service.url=http://job:8082
+company-service.url=http://company:8081
+review-service.url=http://review:8083
 
 server.port=8082
 spring.application.name=job-service
 
-# H2 Database
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:test
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/job
+spring.datasource.url=jdbc:postgresql://postgres:5432/job
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=POSTGRESQL
@@ -21,16 +15,16 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://servicereg:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # Zipkin
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 # Config Server
-spring.config.import=optional:configserver:http://localhost:8080
-#spring.profiles.active=dev
+spring.config.import=optional:configserver:http://config-server-ms:8080
 
 
 # Resilience4j
@@ -53,6 +47,6 @@ resilience4j.ratelimiter.instances.companyBreaker.limit-for-period = 2
 
 
 # Actuator
-management.health.circuitbreakers.enabled=true
+management.health.circuit-breakers.enabled=true
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
