--- a/reviewms/src/main/resources/application-docker.properties
+++ b/reviewms/src/main/resources/application-docker.properties
@@ -1,9 +1,9 @@
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
+job-service.url=http://job:8082
+company-service.url=http://company:8081
+review-service.url=http://review:8083
 
-server.port=8081
-spring.application.name=company-service
+server.port=8083
+spring.application.name=review-service
 
 # H2 Database
 #spring.h2.console.enabled=true
@@ -12,7 +12,7 @@ spring.application.name=company-service
 #spring.jpa.hibernate.ddl-auto=update
 
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/company
+spring.datasource.url=jdbc:postgresql://postgres:5432/review
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=POSTGRESQL
@@ -21,11 +21,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://servicereg:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # Zipkin
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 # RabbitMQ
@@ -33,4 +34,3 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
