--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+job-service.url=http://localhost:8082
+company-service.url=http://localhost:8081
+review-service.url=http://localhost:8083
+
 server.port=8083
 spring.application.name=review-service
 
@@ -29,3 +33,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+setting.rabbitmq.enableautocreation=
